added simple customer reviw

--- a/index.html
+++ b/index.html
@@ -132,12 +132,13 @@
             </div>
         </section>
 <!--great tea fresh tea section-->
-        <section class="my-24 flex flex-col lg:flex-row">
+        <section class="my-24 flex gap-12 flex-col lg:flex-row">
             <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
-                <div></div>
-                <div class="row-span-2"><img src="images/fresh-1.png"></div>
-                <div class="row-span-2"><img src="images/fresh-2.png"></div>
-                <div></div>
+                <div class="rounded-xl h-36 bg-gradient-to-r from-red-100 to-amber-100"></div>
+                <div class="row-span-2 bg-[#E6A6231A] rounded-lg px-8 py-12 flex justify-center items-center"><img src="images/fresh-1.png"></div>
+                <div class="row-span-2 bg-[#5776391A] rounded-lg px-8 py-12 flex justify-center items-center"><img src="images/fresh-2.png"></div>
+                
+                <div class="rounded-xl h-36 bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF]"></div>
             </div>
             <div class="space-y-5 flex-1">
                 <h3 class="text-5xl font-extrabold">Great Tea, Freshly<br>
@@ -153,6 +154,38 @@
                 <h4 class="text-xl font-extrabold mt-8">Premium Quality</h4>
                 <p>A unique and different style from other teapots gives a luxurious and minimalist impression</p>
             </div>
+            </section>
+ <!-- Super Client section-->
+<section class="my-24  flex flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#f00] px-16 py-24">
+
+   <div class="space-y-5">
+   
+<h2 class="text-5xl font-extrabold text-white">
+    Meet Our supplier
+    <br>
+    Clients
+</h2>
+<p class="text-white">
+    There re many variation of passages of Lorem ipsum avaiable.
+    but the majority have suffered altaretion in some form, by injected humour,
+    or randomised words witch don't look even believable
+</p>
+<button class="btn btn-primary"> Show All</button>
+
+   </div>
+<div>
+    <!--review-->
+    <div class="relative p-10 rounded-lg bg-white">
+        <img class="absolute -top-5 -left-5" src="images/client.png" alt="">
+        <p>we are providing the best and suitable insurence service
+            for the people who are interesed to treatment
+        </p>
+        <h4 class="font-bold mt-5">Ilham yuda</h4>
+        <p class="font-medium">Businessmen</p>
+    </div>
+</div>
+    
+</section>
 
         </section>
 
